--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bunyan": "^1.8.12",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
-    "helmet": "^1.3.0",
+    "helmet": "^3.9.0",
+    "helmet-csp": "^2.6.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
