--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "node": ">=4"
   },
   "scripts": {
+    "postinstall": "ls",
+    "build": "gulp build",
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register test/top.test.js",
+    "debug": "node-debug --harmony --harmony_destructuring server/server.js",
+    "inspect": "node --harmony --inspect server/server.js | ./node_modules/bunyan/bin/bunyan",
+    "pretest": "gulp lint",
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check"
